--- a/puff.html
+++ b/puff.html
@@ -34,9 +34,9 @@
         <h4>📞:47025199/29863457</h4>
       </div>
       <div class="menu">
-        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i>
+        <a href="https://www.facebook.com/share/1E4NRAS85z/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i>
         </a>
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i>
+        <a href="https://www.instagram.com/puff_store2" target="_blank"><i class="fab fa-instagram"></i>
         </a>
       </div>
     </nav>
