--- a/puff.html
+++ b/puff.html
@@ -47,7 +47,7 @@
         <h2 class="titre">vozol 20k</h2>
         <div class="cards-container">
           <!-- Product 1 -->
-          <div class="card" style="width: 15rem"  id="watermelon_ice">
+          <div class="card" style="width: 15rem"  id="vozol20k_watermelon ice">
             <img
               src="./img/puff_photo/1.jpg"
               alt="Image 1"
@@ -71,7 +71,7 @@
           </div>
 
           <!-- Product 2 -->
-          <div class="card" style="width: 15rem"  id="vanicreme_tobacco">
+          <div class="card" style="width: 15rem"  id="vozol20k_vanicreme tobacco">
             <img
             src="./img/puff_photo/2.jpg"
             alt="Image 1"
@@ -96,7 +96,7 @@
           </div>
 
           <!-- Product 3 -->
-          <div class="card" style="width: 15rem"  id="peach_mango">
+          <div class="card" style="width: 15rem"  id="vozol20k_peach mango">
             <img
               src="./img/puff_photo/3.jpg"
               alt="Image 1"
@@ -122,7 +122,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 4 -->
-          <div class="card" style="width: 15rem"  id="dargon_fruite__bannane_cherry">
+          <div class="card" style="width: 15rem"  id="vozol20k_dargon fruite bannane cherry">
             <img
               src="./img/puff_photo/4.jpg"
               alt="Image 1"
@@ -146,7 +146,7 @@
           </div>
 
           <!-- Product 5 -->
-          <div class="card" style="width: 15rem"  id="miami_mint">
+          <div class="card" style="width: 15rem"  id="vozol20k_miami mint">
             <img
             src="./img/puff_photo/5.jpg"
             alt="Image 1"
@@ -171,7 +171,7 @@
           </div>
 
           <!-- Product 6 -->
-          <div class="card" style="width: 15rem"  id="grape_ice">
+          <div class="card" style="width: 15rem"  id="vozol20k_grape ice">
             <img
             src="./img/puff_photo/6.jpg"
             alt="Image 1"
@@ -197,7 +197,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 7 -->
-          <div class="card" style="width: 15rem"  id="limon_lime">
+          <div class="card" style="width: 15rem"  id="vozol20k_limon lime">
             <img
               src="./img/puff_photo/7.jpg"
               alt="Image 1"
@@ -221,7 +221,7 @@
           </div>
 
           <!-- Product 8 -->
-          <div class="card" style="width: 15rem"  id="blue_razz_ice">
+          <div class="card" style="width: 15rem"  id="vozol20k_blue razz ice">
             <img
             src="./img/puff_photo/8.jpg"
             alt="Image 1"
@@ -246,7 +246,7 @@
           </div>
 
           <!-- Product 9 -->
-          <div class="card" style="width: 15rem" id="strawberry">
+          <div class="card" style="width: 15rem" id="vozol20k_strawberry">
             <img
             src="./img/puff_photo/9.jpg"
             alt="Image 1"
